# BBMOCBS-approx

./: .README.md.swp  .gitignore  CMakeLists.txt  README.md  Solver.cpp  Solver.h  cal_diver.py  learn.md  output.txt  plot.py  rename.py  test  test.cpp  write.py
dataset/: write.cpp
dataset/4-4-example/: 4-4.config  4-4.map
dataset/48-48-random-cost/: random-172.cost
dataset/den312d/: write  write.cpp
dataset/empty-48-48/: write  write.cpp
dataset/random-32-32-10/: random-32-32-10.cost
dataset/random-32-32-20/: write  write.cpp
dataset/random-64-64-10/: write  write.cpp
dataset/random-64-64-20/: write  write.cpp
dataset/room-32-32-4/: write  write.cpp
dataset/warehouse-10-20-10-2-2/: write  write.cpp
example/: random-1.cost  random-2.cost  random-3.cost  random-32-32-20.map
inc/: AbstractSolver.h  ApexSearch.h  BOAStar.h  Definitions.h  DominanceChecker.h  IOUtils.h  MAP.h  NAMOA.h  PPA.h  ShortestPathHeuristic.h  SingleCriteria.h  Utils.h
inc/HighLevel/: ConflictResolver.h  HighLevelSolver.h  epsSolver.h  kSolver.h  pexSolver.h
inc/LowLevel/: AbstractSolver.h  ApexSearch.h  BOAStar.h  DominanceChecker.h  NAMOA.h  RunApex.h  ShortestPathHeuristic.h
inc/Utils/: ConflictChecker.h  Definitions.h  IOUtils.h  Logger.h  MAP.h  MapQueue.h  RunApex.h  Solver.h
run/: config.json  run.py  run_once.py  ss.json
src/: Definitions.cpp  IOUtils.cpp  learn.md  main.cpp
src/BiCriteria/: AbstractSolver.cpp  ApexSearch.cpp  BOAStar.cpp  DominanceChecker.cpp  NAMOA.cpp  PPA.cpp  ShortestPathHeuristic.cpp  SingleCriteria.cpp
src/HighLevel/: epsSolver.cpp  (+4 more)
(+3836 files in other folders)
